Fix/add spacing overrides (#147)
* fix: add spacer overrides from cms

* fix: split body out from typography and add fonts to helsenorge.scss

--- a/packages/designsystem-react/src/scss/_typography.scss
+++ b/packages/designsystem-react/src/scss/_typography.scss
@@ -1,13 +1,3 @@
-body {
-  font-family: 'Source Sans Pro', Arial, Verdana, sans-serif;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  @include media-breakpoint-up(md) {
-    font-size: 1.25rem;
-    line-height: 1.875rem;
-  }
-}
-
 .title1 {
   font-size: 2.625rem;
   line-height: 3rem;
